# RIS-course-project

./: .gitignore  .pdm-python  app.py  docker-compose.mysql.yml  init_dotenv.py  pyproject.toml  tree.txt
domain/: billboards.py
infrastructure/context/: mysql_context_manager.py
infrastructure/repositories/: billboard_repository.py
src/: app.py
src/application/services/: auth_service.py  billboard_service.py  order_service.py  query_service.py  report_service.py
src/domain/: billboards.py  order.py  queries.py  user.py
src/infrastructure/: container.py
src/infrastructure/api/: setup.py
src/infrastructure/api/base_templates/: base_template.html
src/infrastructure/app/: setup.py
src/infrastructure/cache/: billboards_cache.py
src/infrastructure/configs/: mysql_cm_config.py
src/infrastructure/decorators/: auth_required.py  role_required.py
src/infrastructure/exceptions/: auth_errors.py
src/infrastructure/providers/: sql_provider.py
src/infrastructure/repositories/: billboard_repository.py  order_repository.py  report_repository.py  user_repository.py
src/infrastructure/sql/auth/: create_user.sql  get_internal_user.sql  get_user.sql
src/infrastructure/sql/billboards/: add_billboard.sql  get_billboard_by_id.sql  get_billboards.sql
src/infrastructure/sql/orders/: create_order.sql  create_order_line.sql
src/infrastructure/sql/queries/: get_billboards.sql  get_customer.sql  get_owner_billboards.sql  get_users.sql
src/infrastructure/sql/reports/: check_bilboard_rent_report.sql  get_billboard_rent_report.sql  get_billboards_rent_report.sql
(+42 files in other folders)
