[project]
name = "ris"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kirill Berdyshev", email = "kdberdyshev@gmail.com"},
]
dependencies = ["pydantic>=2.9.2", "flask>=3.0.3", "pymysql>=1.1.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
